# resinlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
android/jni/: Android.mk  Application.mk
emscripten/debug/: configure.sh
emscripten/release/: configure.sh
src/: CMakeLists.txt
src/resin/: RESIN.h
src/resin/app/: App.cpp  App.h  Config.cpp  Config.h  ResinNativeActivity.cpp  ResinNativeActivity.h  ResinSDL.cpp  ResinSDL.h
src/resin/cameras/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/resin/core/: Attribute.cpp  Attribute.h  BufferGeometry.cpp  BufferGeometry.h  CoreFwd.h  GL.h  Image.cpp  Image.h  MemoryBuffer.cpp  MemoryBuffer.h  Object3D.cpp  Object3D.h  Property.h  Stream.cpp  Stream.h
src/resin/extras/core/: Array.h
src/resin/lights/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  HemisphereLight.cpp  HemisphereLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/resin/materials/: LineBasicMaterial.cpp  LineBasicMaterial.h  Material.cpp  Material.h  MaterialsFwd.h  MeshBasicMaterial.cpp  MeshBasicMaterial.h  MeshPhongMaterial.cpp  MeshPhongMaterial.h  ParticleBasicMaterial.cpp  ParticleBasicMaterial.h  ShaderMaterial.cpp  ShaderMaterial.h  SpriteMaterial.cpp  SpriteMaterial.h  Uniform.h
src/resin/math/: Box3.cpp  Box3.h  Color.cpp  Color.h  Euler.cpp  Euler.h  Frustum.cpp  Frustum.h  Line3.cpp  Line3.h  Math.cpp  Math.h  MathFwd.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/resin/objects/: Line.cpp  Line.h  Mesh.cpp  Mesh.h  ParticleSystem.cpp  ParticleSystem.h  Sprite.cpp  Sprite.h
src/resin/renderers/: GLES2Renderer.cpp  GLES2Renderer.h  Program.cpp  Program.h
src/resin/renderers/shaders/: LineDashedMaterial-shader.cpp  MeshBasicMaterial-shader.cpp  MeshDepthMaterial-shader.cpp  MeshLambertMaterial-shader.cpp  MeshNormalMaterial-shader.cpp  MeshPhongMaterial-shader.cpp  ParticleBasicMaterial-shader.cpp  convertShaders.js
src/resin/sandbox/: D_png.h  Sandbox.cpp
src/resin/scenes/: Fog.cpp  Fog.h  Scene.cpp  Scene.h
src/resin/textures/: Texture.cpp  Texture.h
xcode/: configure.sh
